--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -25,13 +25,20 @@
         android:name="com.example.chat.ChatApplication" >
         <activity
             android:name="com.example.chat.activity.LoginActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:configChanges="orientation|screenSize" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        
+        <activity
+            android:name="com.example.chat.activity.RegistActivity"
+            android:label="@string/activity_lable_regist"
+            android:configChanges="orientation|screenSize"/>
+        
     </application>
 
 </manifest>
