--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -29,7 +29,7 @@
         android:name="com.example.chat.ChatApplication" >
         <activity
             android:name="com.example.chat.activity.LoginActivity"
-            android:label="@string/activity_lable_login"
+            android:label="@string/app_name"
             android:configChanges="orientation|screenSize" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -42,6 +42,7 @@
             android:name="com.example.chat.activity.MainActivity"
             android:label="@string/app_name"
             android:configChanges="orientation|screenSize"
+            android:theme="@style/AppTheme.MainActivity"
             android:launchMode="singleTask"/>
         <activity
             android:name="com.example.chat.activity.RegistActivity"
