添加好友详情

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -52,6 +52,10 @@
             android:name="com.example.chat.activity.AddFriendActivity"
             android:label="@string/activity_lable_add_friend"
             android:configChanges="orientation|screenSize"/>
+        <activity
+            android:name="com.example.chat.activity.UserInfoActivity"
+            android:label="@string/activity_lable_friend_info"
+            android:configChanges="orientation|screenSize"/>
         
     </application>
 
