--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -20,6 +20,7 @@
     <uses-permission android:name="android.permission.ACCESS_BACKGROUND_SERVICE"/>
     <!-- 获取手机状态的权限 -->
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission android:name="android.permission.READ_USER_DICTIONARY" />
 
     <application
         android:allowBackup="true"
@@ -57,6 +58,9 @@
             android:label="@string/activity_lable_friend_info"
             android:configChanges="orientation|screenSize"/>
         
+        <provider android:name="com.example.chat.provider.UserProvider"
+            android:authorities="com.example.chat.provider.user"
+            android:exported="false" />
     </application>
 
 </manifest>
