修改了数据库结构，创建了服务

--- a/libs/asmack-android-8-4.1.0-alpha1-SNAPSHOT-2014-07-15.jar.properties
+++ b/libs/asmack-android-8-4.1.0-alpha1-SNAPSHOT-2014-07-15.jar.properties
@@ -1,2 +1,2 @@
 #src=E:\\AndroidLib\\asmack-android-8-source-4.1.0-alpha1-SNAPSHOT-2014-07-15.zip
-src=D:\\AndroidLib\\asmack-android-8-source-4.1.0-alpha1-SNAPSHOT-2014-07-15.zip
+src=../libsrc/asmack-android-8-source-4.1.0-alpha1-SNAPSHOT-2014-07-15.zip
