--- a/libs/android-support-v4.jar.properties
+++ b/libs/android-support-v4.jar.properties
@@ -1,2 +1,2 @@
-#src=D:\\Program Files (x86)\\Android\\android-sdk\\extras\\android\\support\\v4\\src\\java
-src=D:\\Android\\android-sdk\\extras\\android\\support\\v4\\src\\java
+src=D:\\Program Files (x86)\\Android\\android-sdk\\extras\\android\\support\\v4\\src\\java
+#src=D:\\Android\\android-sdk\\extras\\android\\support\\v4\\src\\java
