添加了聊天界面

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -57,6 +57,10 @@
             android:name="com.example.chat.activity.UserInfoActivity"
             android:label="@string/activity_lable_friend_info"
             android:configChanges="orientation|screenSize"/>
+        <activity
+            android:name="com.example.chat.activity.ChatActivity"
+            android:label="@string/activity_lable_chat"
+            android:configChanges="orientation|screenSize"/>
         
         <provider android:name="com.example.chat.provider.UserProvider"
             android:authorities="com.example.chat.provider.user"
