--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -28,8 +28,9 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme"
         android:name="com.example.chat.ChatApplication" >
+        <!-- android:name="com.example.chat.activity.LoginActivity" -->
         <activity
-            android:name="com.example.chat.activity.LoginActivity"
+            android:name="com.example.chat.activity.ChatActivity1"
             android:label="@string/app_name"
             android:configChanges="orientation|screenSize" >
             <intent-filter>
@@ -61,11 +62,11 @@
             android:name="com.example.chat.activity.ChatActivity"
             android:label="@string/activity_lable_chat"
             android:configChanges="orientation|screenSize"/>
-        <activity
+        <!-- <activity
             android:name="com.example.chat.activity.ChatActivity1"
             android:label="@string/activity_lable_chat"
             android:configChanges="orientation|screenSize"
-            android:windowSoftInputMode="stateUnchanged|adjustResize"/>
+            android:windowSoftInputMode="stateUnchanged|adjustResize"/> -->
         
         <provider android:name="com.example.chat.provider.UserProvider"
             android:authorities="com.example.chat.provider.user"
