--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -30,7 +30,7 @@
         android:name="com.example.chat.ChatApplication" >
         <!-- android:name="com.example.chat.activity.LoginActivity" -->
         <activity
-            android:name="com.example.chat.activity.ChatActivity1"
+            android:name="com.example.chat.activity.LoginActivity"
             android:label="@string/app_name"
             android:configChanges="orientation|screenSize" >
             <intent-filter>
@@ -62,14 +62,18 @@
             android:name="com.example.chat.activity.ChatActivity"
             android:label="@string/activity_lable_chat"
             android:configChanges="orientation|screenSize"/>
-        <!-- <activity
+        <activity
             android:name="com.example.chat.activity.ChatActivity1"
             android:label="@string/activity_lable_chat"
             android:configChanges="orientation|screenSize"
-            android:windowSoftInputMode="stateUnchanged|adjustResize"/> -->
+            android:windowSoftInputMode="stateUnchanged|adjustResize"/>
         
         <provider android:name="com.example.chat.provider.UserProvider"
             android:authorities="com.example.chat.provider.user"
+            android:exported="false" />
+        
+        <provider android:name="com.example.chat.provider.MsgProvider"
+            android:authorities="com.example.chat.provider.msg"
             android:exported="false" />
         
         <service android:name="com.example.chat.service.CoreService" />
