--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -48,7 +48,7 @@
             android:launchMode="singleTask"/>
         <activity
             android:name="com.example.chat.activity.RegistActivity"
-            android:label="@string/app_name"
+            android:label="@string/activity_lable_regist"
             android:configChanges="orientation|screenSize"/>
         <activity
             android:name="com.example.chat.activity.AddFriendActivity"
@@ -67,9 +67,14 @@
             android:label="@string/activity_lable_chat"
             android:configChanges="orientation|screenSize"
             android:windowSoftInputMode="stateUnchanged|adjustResize"/>
+        <activity
+            android:name="com.example.chat.activity.NewFriendInfoActivity"
+            android:label="@string/activity_lable_new_friend_info"
+            android:configChanges="orientation|screenSize"
+            android:windowSoftInputMode="stateUnchanged|adjustResize"/>
         
         <provider android:name="com.example.chat.provider.UserProvider"
-            android:authorities="com.example.chat.provider.user"
+            android:authorities="com.example.chat.provider.user;com.example.chat.provider.newFriend"
             android:exported="false" />
         
         <provider android:name="com.example.chat.provider.MsgProvider"
