完善接收添加好友的请求

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -30,7 +30,7 @@
         android:name="com.example.chat.ChatApplication" >
         <!-- android:name="com.example.chat.activity.LoginActivity" -->
         <activity
-            android:name="com.example.chat.activity.LoginActivity"
+            android:name="com.example.chat.activity.AlbumActivity"
             android:label="@string/app_name"
             android:configChanges="orientation|screenSize" >
             <intent-filter>
@@ -39,6 +39,16 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+<!--         <activity
+            android:name="com.example.chat.activity.LoginActivity"
+            android:label="@string/app_name"
+            android:configChanges="orientation|screenSize" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity> -->
         
         <activity
             android:name="com.example.chat.activity.MainActivity"
@@ -72,6 +82,11 @@
             android:label="@string/activity_lable_new_friend_info"
             android:configChanges="orientation|screenSize"
             android:windowSoftInputMode="stateUnchanged|adjustResize"/>
+        <!-- <activity
+            android:name="com.example.chat.activity.AlbumActivity"
+            android:label="@string/activity_lable_album"
+            android:configChanges="orientation|screenSize"
+            android:windowSoftInputMode="stateUnchanged|adjustResize"/> -->
         
         <provider android:name="com.example.chat.provider.UserProvider"
             android:authorities="com.example.chat.provider.user;com.example.chat.provider.newFriend"
