--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -5,8 +5,7 @@
     android:versionName="1.0" >
 
     <uses-sdk
-        android:minSdkVersion="14"
-        android:targetSdkVersion="19" />
+        android:minSdkVersion="14" />
 
     <!-- 访问网络的权限 -->
     <uses-permission android:name="android.permission.INTERNET"/>
@@ -29,7 +28,7 @@
         android:theme="@style/AppTheme"
         android:name="com.example.chat.ChatApplication" >
         <activity
-            android:name="com.example.chat.activity.LoginActivity"
+            android:name="com.example.chat.activity.AlbumActivity"
             android:label="@string/app_name"
             android:configChanges="orientation|screenSize" >
             <intent-filter>
@@ -38,6 +37,16 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+<!--         <activity
+            android:name="com.example.chat.activity.LoginActivity"
+            android:label="@string/app_name"
+            android:configChanges="orientation|screenSize" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity> -->
         
         <activity
             android:name="com.example.chat.activity.MainActivity"
@@ -71,12 +80,12 @@
             android:label="@string/activity_lable_new_friend_info"
             android:configChanges="orientation|screenSize"
             android:windowSoftInputMode="stateUnchanged|adjustResize"/>
-        <activity
+        <!-- <activity
             android:name="com.example.chat.activity.AlbumActivity"
             android:label="@string/activity_lable_album"
             android:configChanges="orientation|screenSize"
             android:theme="@style/AppTheme.AlbumActivity"
-            android:windowSoftInputMode="stateUnchanged|adjustResize"/>
+            android:windowSoftInputMode="stateUnchanged|adjustResize"/> -->
             
         <activity
             android:name="com.example.chat.activity.PhotoPreviewActivity"
