完成了文件的接收，视频的选择

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -61,7 +61,7 @@
             android:label="@string/activity_lable_chat"
             android:configChanges="orientation|screenSize"/>
         <activity
-            android:name="com.example.chat.activity.ChatActivity1"
+            android:name="com.example.chat.activity.ChatActivity"
             android:label="@string/activity_lable_chat"
             android:configChanges="orientation|screenSize"
             android:windowSoftInputMode="stateUnchanged|adjustResize"/>
