--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -28,7 +28,7 @@
         android:theme="@style/AppTheme"
         android:name="com.example.chat.ChatApplication" >
         <activity
-            android:name="com.example.chat.activity.LoginActivity"
+            android:name="com.example.chat.activity.AudioListActivity"
             android:label="@string/app_name"
             android:configChanges="orientation|screenSize" >
             <intent-filter>
@@ -37,6 +37,16 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+<!--         <activity
+            android:name="com.example.chat.activity.LoginActivity"
+            android:label="@string/app_name"
+            android:configChanges="orientation|screenSize" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity> -->
         
         <activity
             android:name="com.example.chat.activity.MainActivity"
