--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -28,16 +28,6 @@
         android:theme="@style/AppTheme"
         android:name="com.example.chat.ChatApplication" >
         <activity
-            android:name="com.example.chat.activity.AudioListActivity"
-            android:label="@string/app_name"
-            android:configChanges="orientation|screenSize" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-<!--         <activity
             android:name="com.example.chat.activity.LoginActivity"
             android:label="@string/app_name"
             android:configChanges="orientation|screenSize" >
@@ -46,7 +36,7 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity> -->
+        </activity>
         
         <activity
             android:name="com.example.chat.activity.MainActivity"
@@ -92,6 +82,12 @@
         <activity
             android:name="com.example.chat.activity.FileExplorerActivity"
             android:label="@string/activity_lable_album"
+            android:configChanges="orientation|screenSize"
+            android:windowSoftInputMode="stateUnchanged|adjustResize"/>
+            
+        <activity
+            android:name="com.example.chat.activity.AudioListActivity"
+            android:label="@string/activity_lable_audio"
             android:configChanges="orientation|screenSize"
             android:windowSoftInputMode="stateUnchanged|adjustResize"/>
         
