--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -20,6 +20,23 @@
     <!-- 获取手机状态的权限 -->
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission android:name="android.permission.READ_USER_DICTIONARY" />
+    <!-- 添加录音权限 -->
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
+    
+    <uses-permission android:name="android.permission.GET_ACCOUNTS" />  
+	<uses-permission android:name="android.permission.USE_CREDENTIALS" />  
+	<uses-permission android:name="android.permission.MANAGE_ACCOUNTS" />
+	<uses-permission android:name="android.permission.AUTHENTICATE_ACCOUNTS" /> 
+	<uses-permission android:name="com.android.launcher.permission.READ_SETTINGS" />
+	<uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />  
+	<uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+	<uses-permission android:name="android.permission.BROADCAST_STICKY" />  
+	<uses-permission android:name="android.permission.WRITE_SETTINGS" />
+	<uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />
+	<!-- 这个权限用于进行网络定位-->
+	<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+	<!-- 这个权限用于访问GPS定位-->
+	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
 
     <application
         android:allowBackup="true"
@@ -27,8 +44,14 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme"
         android:name="com.example.chat.ChatApplication" >
+        
+        <!-- 百度地图key -->
+        <meta-data 
+            android:name="com.baidu.lbsapi.API_KEY"
+            android:value="53xCgO1vglPfHZOggwlqBtep" />
+        
         <activity
-            android:name="com.example.chat.activity.LoginActivity"
+            android:name="com.example.chat.test.TestBaiduLocActivity"
             android:label="@string/app_name"
             android:configChanges="orientation|screenSize" >
             <intent-filter>
@@ -37,6 +60,16 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+<!--         <activity
+            android:name="com.example.chat.activity.LoginActivity"
+            android:label="@string/app_name"
+            android:configChanges="orientation|screenSize" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity> -->
         
         <activity
             android:name="com.example.chat.activity.MainActivity"
@@ -56,11 +89,11 @@
             android:name="com.example.chat.activity.UserInfoActivity"
             android:label="@string/activity_lable_friend_info"
             android:configChanges="orientation|screenSize"/>
-        <activity
+        <!-- <activity
             android:name="com.example.chat.activity.ChatActivity"
             android:label="@string/activity_lable_chat"
             android:configChanges="orientation|screenSize"
-            android:windowSoftInputMode="stateUnchanged|adjustResize"/>
+            android:windowSoftInputMode="stateUnchanged|adjustResize"/> -->
         <activity
             android:name="com.example.chat.activity.NewFriendInfoActivity"
             android:label="@string/activity_lable_new_friend_info"
@@ -100,6 +133,16 @@
             android:exported="false" />
         
         <service android:name="com.example.chat.service.CoreService" />
+        
+          <service
+            android:name="com.baidu.location.f"
+            android:enabled="true"
+            android:process=":remote" >
+            <intent-filter>
+                <action android:name="com.baidu.location.service_v2.2" >
+                </action>
+            </intent-filter>
+        </service>
     </application>
 
 </manifest>
