--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -5,7 +5,7 @@
     android:versionName="1.0" >
 
     <uses-sdk
-        android:minSdkVersion="14" />
+        android:minSdkVersion="14" android:targetSdkVersion="21" />
 
     <!-- 访问网络的权限 -->
     <uses-permission android:name="android.permission.INTERNET"/>
