添加了volley的jar包

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -50,7 +50,7 @@
             android:name="com.baidu.lbsapi.API_KEY"
             android:value="53xCgO1vglPfHZOggwlqBtep" />
         
-        <activity
+        <!-- <activity
             android:name="com.example.chat.test.TestBaiduLocActivity"
             android:label="@string/app_name"
             android:configChanges="orientation|screenSize" >
@@ -59,8 +59,8 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-<!--         <activity
+        </activity> -->
+        <activity
             android:name="com.example.chat.activity.LoginActivity"
             android:label="@string/app_name"
             android:configChanges="orientation|screenSize" >
@@ -69,7 +69,7 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity> -->
+        </activity>
         
         <activity
             android:name="com.example.chat.activity.MainActivity"
@@ -89,11 +89,11 @@
             android:name="com.example.chat.activity.UserInfoActivity"
             android:label="@string/activity_lable_friend_info"
             android:configChanges="orientation|screenSize"/>
-        <!-- <activity
+        <activity
             android:name="com.example.chat.activity.ChatActivity"
             android:label="@string/activity_lable_chat"
             android:configChanges="orientation|screenSize"
-            android:windowSoftInputMode="stateUnchanged|adjustResize"/> -->
+            android:windowSoftInputMode="stateUnchanged|adjustResize"/>
         <activity
             android:name="com.example.chat.activity.NewFriendInfoActivity"
             android:label="@string/activity_lable_new_friend_info"
