--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -51,7 +51,7 @@
             android:value="53xCgO1vglPfHZOggwlqBtep" />
         
         <!-- <activity
-            android:name="com.example.chat.test.TestBaiduLocActivity"
+            android:name="com.example.chat.activity.FileExplorerActivity"
             android:label="@string/app_name"
             android:configChanges="orientation|screenSize" >
             <intent-filter>
