--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -50,18 +50,8 @@
             android:name="com.baidu.lbsapi.API_KEY"
             android:value="53xCgO1vglPfHZOggwlqBtep" /> -->
         
-        <!-- <activity
-            android:name="com.example.chat.activity.FileExplorerActivity"
-            android:label="@string/app_name"
-            android:configChanges="orientation|screenSize" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity> -->
         <activity
-            android:name="com.example.chat.activity.LoginActivity"
+            android:name="com.example.chat.activity.AlbumActivity"
             android:label="@string/app_name"
             android:configChanges="orientation|screenSize" >
             <intent-filter>
@@ -70,6 +60,16 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <!-- <activity
+            android:name="com.example.chat.activity.LoginActivity"
+            android:label="@string/app_name"
+            android:configChanges="orientation|screenSize" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity> -->
         
         <activity
             android:name="com.example.chat.activity.MainActivity"
@@ -92,37 +92,31 @@
         <activity
             android:name="com.example.chat.activity.ChatActivity"
             android:label="@string/activity_lable_chat"
-            android:configChanges="orientation|screenSize"
-            android:windowSoftInputMode="stateUnchanged|adjustResize"/>
+            android:configChanges="orientation|screenSize"/>
         <activity
             android:name="com.example.chat.activity.NewFriendInfoActivity"
             android:label="@string/activity_lable_new_friend_info"
-            android:configChanges="orientation|screenSize"
-            android:windowSoftInputMode="stateUnchanged|adjustResize"/>
-        <activity
+            android:configChanges="orientation|screenSize"/>
+        <!-- <activity
             android:name="com.example.chat.activity.AlbumActivity"
             android:label="@string/activity_lable_album"
             android:configChanges="orientation|screenSize"
-            android:theme="@style/AppTheme.AlbumActivity"
-            android:windowSoftInputMode="stateUnchanged|adjustResize"/>
+            android:theme="@style/AppTheme.AlbumActivity"/> -->
             
         <activity
             android:name="com.example.chat.activity.PhotoPreviewActivity"
             android:label="@string/activity_lable_album"
-            android:configChanges="orientation|screenSize"
-            android:windowSoftInputMode="stateUnchanged|adjustResize"/>
+            android:configChanges="orientation|screenSize"/>
             
         <activity
             android:name="com.example.chat.activity.FileExplorerActivity"
             android:label="@string/activity_lable_album"
-            android:configChanges="orientation|screenSize"
-            android:windowSoftInputMode="stateUnchanged|adjustResize"/>
+            android:configChanges="orientation|screenSize"/>
             
         <activity
             android:name="com.example.chat.activity.AudioListActivity"
             android:label="@string/activity_lable_audio"
-            android:configChanges="orientation|screenSize"
-            android:windowSoftInputMode="stateUnchanged|adjustResize"/>
+            android:configChanges="orientation|screenSize"/>
         
         <provider android:name="com.example.chat.provider.UserProvider"
             android:authorities="com.example.chat.provider.user;com.example.chat.provider.newFriend"
