--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -47,7 +47,7 @@
             android:value="2273245829380d27d37304e62c3d188f" />
         
         <activity
-            android:name="com.example.chat.activity.AlbumActivity"
+            android:name="com.example.chat.activity.ChatActivity"
             android:label="@string/app_name"
             android:configChanges="orientation|screenSize" >
             <intent-filter>
@@ -56,6 +56,16 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+<!--         <activity
+            android:name="com.example.chat.activity.LocationShareActivity"
+            android:label="@string/app_name"
+            android:configChanges="orientation|screenSize" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity> -->
         <!-- <activity
             android:name="com.example.chat.activity.LoginActivity"
             android:label="@string/app_name"
@@ -85,34 +95,41 @@
             android:name="com.example.chat.activity.UserInfoActivity"
             android:label="@string/activity_lable_friend_info"
             android:configChanges="orientation|screenSize"/>
-        <activity
+        <!-- <activity
             android:name="com.example.chat.activity.ChatActivity"
             android:label="@string/activity_lable_chat"
-            android:configChanges="orientation|screenSize"/>
+            android:configChanges="orientation|screenSize"/> -->
         <activity
             android:name="com.example.chat.activity.NewFriendInfoActivity"
             android:label="@string/activity_lable_new_friend_info"
             android:configChanges="orientation|screenSize"/>
-        <!-- <activity
+        <activity
             android:name="com.example.chat.activity.AlbumActivity"
             android:label="@string/activity_lable_album"
             android:configChanges="orientation|screenSize"
-            android:theme="@style/AppTheme.AlbumActivity"/> -->
+            android:theme="@style/AppTheme.AlbumActivity"/>
             
         <activity
             android:name="com.example.chat.activity.PhotoPreviewActivity"
             android:label="@string/activity_lable_album"
-            android:configChanges="orientation|screenSize"/>
+            android:configChanges="orientation|screenSize"
+            android:theme="@style/AppTheme.ImagePreviewActivity"/>
             
         <activity
             android:name="com.example.chat.activity.FileExplorerActivity"
-            android:label="@string/activity_lable_album"
+            android:label="@string/activity_lable_file_explorer"
             android:configChanges="orientation|screenSize"/>
             
         <activity
             android:name="com.example.chat.activity.AudioListActivity"
             android:label="@string/activity_lable_audio"
             android:configChanges="orientation|screenSize"/>
+        
+        <activity
+            android:name="com.example.chat.activity.LocationShareActivity"
+            android:label="@string/activity_lable_location_share"
+            android:configChanges="orientation|screenSize" >
+        </activity>
         
         <provider android:name="com.example.chat.provider.UserProvider"
             android:authorities="com.example.chat.provider.user;com.example.chat.provider.newFriend"
