--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -56,8 +56,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-<!--         <activity
-            android:name="com.example.chat.activity.LocationShareActivity"
+        <!-- <activity
+            android:name="com.example.chat.activity.MainActivity"
             android:label="@string/app_name"
             android:configChanges="orientation|screenSize" >
             <intent-filter>
