修改全局菜单

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -46,8 +46,8 @@
             android:name="com.amap.api.v2.apikey"
             android:value="2273245829380d27d37304e62c3d188f" />
         
-        <activity
-            android:name="com.example.chat.activity.ChatActivity"
+        <!-- <activity
+            android:name="com.example.chat.activity.ChatActivity1"
             android:label="@string/app_name"
             android:configChanges="orientation|screenSize" >
             <intent-filter>
@@ -55,7 +55,7 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
+        </activity> -->
         <!-- <activity
             android:name="com.example.chat.activity.MainActivity"
             android:label="@string/app_name"
@@ -66,7 +66,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity> -->
-        <!-- <activity
+        <activity
             android:name="com.example.chat.activity.LoginActivity"
             android:label="@string/app_name"
             android:configChanges="orientation|screenSize" >
@@ -75,7 +75,7 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity> -->
+        </activity>
         
         <activity
             android:name="com.example.chat.activity.MainActivity"
@@ -95,10 +95,10 @@
             android:name="com.example.chat.activity.UserInfoActivity"
             android:label="@string/activity_lable_friend_info"
             android:configChanges="orientation|screenSize"/>
-        <!-- <activity
+        <activity
             android:name="com.example.chat.activity.ChatActivity"
             android:label="@string/activity_lable_chat"
-            android:configChanges="orientation|screenSize"/> -->
+            android:configChanges="orientation|screenSize"/>
         <activity
             android:name="com.example.chat.activity.NewFriendInfoActivity"
             android:label="@string/activity_lable_new_friend_info"
