--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -78,6 +78,17 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity> -->
+        <!-- <activity
+            android:name="net.ibaixin.chat.activity.TestActivity"
+            android:label="@string/app_name"
+            android:configChanges="orientation|screenSize"
+            android:theme="@style/AppTheme.ChatActivity" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity> -->
         <activity
             android:name="net.ibaixin.chat.activity.LoginActivity"
             android:label="@string/app_name"
